scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics6.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,11): error TS8006: 'interface' declarations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    interface I { }
              ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.